--- a/index.html
+++ b/index.html
@@ -4,14 +4,43 @@
 <head>
     <meta charset="utf-8">
     <title>Bootstrap 搜索建议插件</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件">
-    <meta name="Keywords" content="Bootstrap Search Suggest,bootstrap,搜索建议插件"/>
+    <meta name="Keywords" content="Bootstrap Search Suggest,bootstrap,搜索建议插件">
     <meta name="author" content="lizhiwen@meizu.com">
     <link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+	<div class="modal fade" id="modalTest">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Modal title</h4>
+				</div>
+				<div class="modal-body">
+					<div class="input-group">
+                        <input type="text" class="form-control" id="modalTest_input" autocomplete="off">
+                        <div class="input-group-btn">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="">
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-right" role="menu"></ul>
+                        </div>
+                        <!-- /btn-group -->
+                    </div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+			<!-- /.modal-content -->
+		</div>
+		<!-- /.modal-dialog -->
+	</div>
+	<!-- /.modal -->
+
     <div class="container">
         <h2>bootstrap combox 搜索建议插件</h2>
         <p>这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件。</p>
@@ -36,7 +65,7 @@
             </div>
 
             <h3>测试(URL 获取)</h3>
-            <p>不展示下拉菜单按钮。</p>
+            <p>不展示下拉菜单按钮。 <a class="btn btn-info" data-toggle="modal" data-target="#modalTest">modal</a></p>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="input-group">
@@ -123,8 +152,8 @@
         keyField: "userName"
     }).on('onDataRequestSuccess', function (e, result) {
         console.log('onDataRequestSuccess: ', result);
-    }).on('onSetSelectValue', function (e, keyword) {
-        console.log('onSetSelectValue: ', keyword);
+    }).on('onSetSelectValue', function (e, keyword, data) {
+        console.log('onSetSelectValue: ', keyword, data);
     }).on('onUnsetSelectValue', function (e) {
         console.log("onUnsetSelectValue");
     });
@@ -132,7 +161,7 @@
     /**
      * 不显示下拉按钮
      */
-    var testBsSuggest = $("#testNoBtn").bsSuggest({
+    var testBsSuggest = $("#testNoBtn, #modalTest_input").bsSuggest({
         //url: "/rest/sys/getuserlist?keyword=",
         url: "data.json",
         /*effectiveFields: ["userName", "shortAccount"],
@@ -143,8 +172,8 @@
         keyField: "userName"
     }).on('onDataRequestSuccess', function (e, result) {
         console.log('onDataRequestSuccess: ', result);
-    }).on('onSetSelectValue', function (e, keyword) {
-        console.log('onSetSelectValue: ', keyword);
+    }).on('onSetSelectValue', function (e, keyword, data) {
+        console.log('onSetSelectValue: ', keyword, data);
     }).on('onUnsetSelectValue', function (e) {
         console.log("onUnsetSelectValue");
     });
@@ -164,6 +193,12 @@
             ],
             'defaults':'http://lzw.me'
         }
+    }).on('onDataRequestSuccess', function (e, result) {
+        console.log('onDataRequestSuccess: ', result);
+    }).on('onSetSelectValue', function (e, keyword, data) {
+        console.log('onSetSelectValue: ', keyword, data);
+    }).on('onUnsetSelectValue', function (e) {
+        console.log("onUnsetSelectValue");
     });
     /**
      * 百度搜索 API 测试
@@ -181,7 +216,6 @@
                 return false;
             }
 
-            console.log(json);
             len = json.s.length;
 
             jsonStr = "{'value':[";
@@ -195,6 +229,12 @@
             //字符串转化为 js 对象
             return data;
         }
+    }).on('onDataRequestSuccess', function (e, result) {
+        console.log('onDataRequestSuccess: ', result);
+    }).on('onSetSelectValue', function (e, keyword, data) {
+        console.log('onSetSelectValue: ', keyword, data);
+    }).on('onUnsetSelectValue', function (e) {
+        console.log("onUnsetSelectValue");
     });
     /**
      * 淘宝搜索 API 测试
@@ -218,7 +258,6 @@
                 return false;
             }
 
-            console.log(json);
             len = json.result.length;
 
             for (i = 0; i < len; i++) {
@@ -231,6 +270,12 @@
             console.log(data);
             return data;
         }
+    }).on('onDataRequestSuccess', function (e, result) {
+        console.log('onDataRequestSuccess: ', result);
+    }).on('onSetSelectValue', function (e, keyword, data) {
+        console.log('onSetSelectValue: ', keyword, data);
+    }).on('onUnsetSelectValue', function (e) {
+        console.log("onUnsetSelectValue");
     });
 
     $("form").submit(function(e) {
