新增 autoSelect 参数，用于设置当使用键盘向上/下方向键时，是否自动选择值； 修改 grunt 使用 eslint 验证； 修复 __index 序列号会在最后一列显示出来的 bug。

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件">
     <meta name="Keywords" content="Bootstrap Search Suggest,bootstrap,搜索建议插件">
     <meta name="author" content="lizhiwen@meizu.com">
-    <link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -138,8 +138,9 @@
 
         </form>
     </div>
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/tether/1.2.0/js/tether.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
     <script src="bootstrap-suggest.js"></script>
     <script type="text/javascript">
     var testBsSuggest = $("#test").bsSuggest({
