--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件">
     <meta name="Keywords" content="Bootstrap Search Suggest,bootstrap,搜索建议插件">
     <meta name="author" content="lizhiwen@meizu.com">
-    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
     h3{
         margin-top: 1.2rem;
@@ -170,164 +170,168 @@
         </form>
     </div>
     <script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="//cdn.bootcss.com/tether/1.2.0/js/tether.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
     <script src="bootstrap-suggest.js"></script>
     <script type="text/javascript">
-    var testBsSuggest = $("#test").bsSuggest({
-        //url: "/rest/sys/getuserlist?keyword=",
-        url: "data.json",
-        /*effectiveFields: ["userName", "shortAccount"],
-        searchFields: [ "shortAccount"],
-        effectiveFieldsAlias:{userName: "姓名"},*/
-        idField: "userId",
-        keyField: "userName"
-    }).on('onDataRequestSuccess', function (e, result) {
-        console.log('onDataRequestSuccess: ', result);
-    }).on('onSetSelectValue', function (e, keyword, data) {
-        console.log('onSetSelectValue: ', keyword, data);
-    }).on('onUnsetSelectValue', function (e) {
-        console.log("onUnsetSelectValue");
-    });
+    (function() {
+        var testBsSuggest = $("#test").bsSuggest({
+            //url: "/rest/sys/getuserlist?keyword=",
+            url: "data.json",
+            /*effectiveFields: ["userName", "shortAccount"],
+            searchFields: [ "shortAccount"],
+            effectiveFieldsAlias:{userName: "姓名"},*/
+            idField: "userId",
+            keyField: "userName"
+        }).on('onDataRequestSuccess', function (e, result) {
+            console.log('onDataRequestSuccess: ', result);
+        }).on('onSetSelectValue', function (e, keyword, data) {
+            console.log('onSetSelectValue: ', keyword, data);
+        }).on('onUnsetSelectValue', function (e) {
+            console.log("onUnsetSelectValue");
+        });
 
-    /**
-     * 不显示下拉按钮
-     */
-    var testBsSuggest = $("#testNoBtn").bsSuggest({
-        //url: "/rest/sys/getuserlist?keyword=",
-        url: "data.json",
-        /*effectiveFields: ["userName", "shortAccount"],
-        searchFields: [ "shortAccount"],
-        effectiveFieldsAlias:{userName: "姓名"},*/
-        showBtn: false,     //不显示下拉按钮
-        delayUntilKeyup: true, //获取数据的方式为 firstByUrl 时，延迟到有输入/获取到焦点时才请求数据
-        idField: "userId",
-        keyField: "userName"
-    }).on('onDataRequestSuccess', function (e, result) {
-        console.log('onDataRequestSuccess: ', result);
-    }).on('onSetSelectValue', function (e, keyword, data) {
-        console.log('onSetSelectValue: ', keyword, data);
-    }).on('onUnsetSelectValue', function (e) {
-        console.log("onUnsetSelectValue");
-    });
+        /**
+         * 不显示下拉按钮
+         */
+        var testBsSuggest = $("#testNoBtn").bsSuggest({
+            //url: "/rest/sys/getuserlist?keyword=",
+            url: "data.json",
+            /*effectiveFields: ["userName", "shortAccount"],
+            searchFields: [ "shortAccount"],
+            effectiveFieldsAlias:{userName: "姓名"},*/
+            showBtn: false,     //不显示下拉按钮
+            delayUntilKeyup: true, //获取数据的方式为 firstByUrl 时，延迟到有输入/获取到焦点时才请求数据
+            idField: "userId",
+            keyField: "userName"
+        }).on('onDataRequestSuccess', function (e, result) {
+            console.log('onDataRequestSuccess: ', result);
+        }).on('onSetSelectValue', function (e, keyword, data) {
+            console.log('onSetSelectValue: ', keyword, data);
+        }).on('onUnsetSelectValue', function (e) {
+            console.log("onUnsetSelectValue");
+        });
 
-    //modal 中显示；不自动选中值；不显示按钮。
-    $("#modalTest_input").bsSuggest({
-        url: "data.json",
-        autoSelect: false,
-        showBtn: false,
-        idField: "userId",
-        keyField: "userName"
-    }).on('onDataRequestSuccess', function (e, result) {
-        console.log('onDataRequestSuccess: ', result);
-    }).on('onSetSelectValue', function (e, keyword, data) {
-        console.log('onSetSelectValue: ', keyword, data);
-    }).on('onUnsetSelectValue', function (e) {
-        console.log("onUnsetSelectValue");
-    });
+        //modal 中显示；不自动选中值；不显示按钮。
+        $("#modalTest_input").bsSuggest({
+            url: "data.json",
+            autoSelect: false,
+            showBtn: false,
+            idField: "userId",
+            keyField: "userName"
+        }).on('onDataRequestSuccess', function (e, result) {
+            console.log('onDataRequestSuccess: ', result);
+        }).on('onSetSelectValue', function (e, keyword, data) {
+            console.log('onSetSelectValue: ', keyword, data);
+        }).on('onUnsetSelectValue', function (e) {
+            console.log("onUnsetSelectValue");
+        });
 
-    /**
-     * 从 data参数中过滤数据
-     */
-    var testdataBsSuggest = $("#test_data").bsSuggest({
-        indexId: 2,  //data.value 的第几个数据，作为input输入框的内容
-        indexKey: 1, //data.value 的第几个数据，作为input输入框的内容
-        data: {
-            'value':[
-                {'id':'0','word':'lzw','description':'http://lzw.me'},
-                {'id':'1','word':'lzwme','description':'http://w.lzw.me'},
-                {'id':'2','word':'meizu','description':'http://www.meizu.com'},
-                {'id':'3','word':'flyme','description':'http://flyme.meizu.com'}
-            ],
-            'defaults':'http://lzw.me'
+        /**
+         * 从 data参数中过滤数据
+         */
+        var data = {value: []}, i = 5001;
+        while(i--) {
+            data.value.push({
+                id: i,
+                word: Math.random() * 100000,
+                description: 'http://lzw.me'
+            });
         }
-    }).on('onDataRequestSuccess', function (e, result) {
-        console.log('从 json.data 参数中获取，不会触发 onDataRequestSuccess 事件');
-    }).on('onSetSelectValue', function (e, keyword, data) {
-        console.log('onSetSelectValue: ', keyword, data);
-    }).on('onUnsetSelectValue', function (e) {
-        console.log("onUnsetSelectValue");
-    });
-    /**
-     * 百度搜索 API 测试
-     */
-    var baiduBsSuggest = $("#baidu").bsSuggest({
-        allowNoKeyword: false,   //是否允许无关键字时请求数据。为 false 则无输入时不执行过滤请求
-        multiWord: true,         //以分隔符号分割的多关键字支持
-        separator: ",",          //多关键字支持时的分隔符，默认为空格
-        getDataMethod: "url",    //获取数据的方式，总是从 URL 获取
-        url: 'http://unionsug.baidu.com/su?p=3&t='+ (new Date()).getTime() +'&wd=', /*优先从url ajax 请求 json 帮助数据，注意最后一个参数为关键字请求参数*/
-        jsonp: 'cb',                      //如果从 url 获取数据，并且需要跨域，则该参数必须设置
-        processData: function (json) {    // url 获取数据时，对数据的处理，作为 getData 的回调函数
-            var i, len, data = {value: []};
-            if (!json || !json.s || json.s.length === 0) {
-                return false;
+
+        var testdataBsSuggest = $("#test_data").bsSuggest({
+            indexId: 2,  //data.value 的第几个数据，作为input输入框的内容
+            indexKey: 1, //data.value 的第几个数据，作为input输入框的内容
+            data: data
+        }).on('onDataRequestSuccess', function (e, result) {
+            console.log('从 json.data 参数中获取，不会触发 onDataRequestSuccess 事件');
+        }).on('onSetSelectValue', function (e, keyword, data) {
+            console.log('onSetSelectValue: ', keyword, data);
+        }).on('onUnsetSelectValue', function (e) {
+            console.log("onUnsetSelectValue");
+        });
+        /**
+         * 百度搜索 API 测试
+         */
+        var baiduBsSuggest = $("#baidu").bsSuggest({
+            allowNoKeyword: false,   //是否允许无关键字时请求数据。为 false 则无输入时不执行过滤请求
+            multiWord: true,         //以分隔符号分割的多关键字支持
+            separator: ",",          //多关键字支持时的分隔符，默认为空格
+            getDataMethod: "url",    //获取数据的方式，总是从 URL 获取
+            url: 'http://unionsug.baidu.com/su?p=3&t='+ (new Date()).getTime() +'&wd=', /*优先从url ajax 请求 json 帮助数据，注意最后一个参数为关键字请求参数*/
+            jsonp: 'cb',                      //如果从 url 获取数据，并且需要跨域，则该参数必须设置
+            processData: function (json) {    // url 获取数据时，对数据的处理，作为 getData 的回调函数
+                var i, len, data = {value: []};
+                if (!json || !json.s || json.s.length === 0) {
+                    return false;
+                }
+
+                len = json.s.length;
+
+                jsonStr = "{'value':[";
+                for (i = 0; i < len; i++) {
+                    data.value.push({
+                        word: json.s[i]
+                    });
+                }
+                data.defaults = 'baidu';
+
+                //字符串转化为 js 对象
+                return data;
             }
+        }).on('onDataRequestSuccess', function (e, result) {
+            console.log('onDataRequestSuccess: ', result);
+        }).on('onSetSelectValue', function (e, keyword, data) {
+            console.log('onSetSelectValue: ', keyword, data);
+        }).on('onUnsetSelectValue', function (e) {
+            console.log("onUnsetSelectValue");
+        });
+        /**
+         * 淘宝搜索 API 测试
+         */
+        var taobaoBsSuggest = $("#taobao").bsSuggest({
+            indexId: 2,             //data.value 的第几个数据，作为input输入框的内容
+            indexKey: 1,            //data.value 的第几个数据，作为input输入框的内容
+            allowNoKeyword: false,  //是否允许无关键字时请求数据。为 false 则无输入时不执行过滤请求
+            multiWord: true,        //以分隔符号分割的多关键字支持
+            separator: ",",         //多关键字支持时的分隔符，默认为空格
+            getDataMethod: "url",   //获取数据的方式，总是从 URL 获取
+            showHeader: true,       //显示多个字段的表头
+            autoDropup: true,       //自动判断菜单向上展开
+            effectiveFieldsAlias:{Id: "序号", Keyword: "关键字"},
+            url: 'http://suggest.taobao.com/sug?code=utf-8&extras=1&q=', /*优先从url ajax 请求 json 帮助数据，注意最后一个参数为关键字请求参数*/
+            jsonp: 'callback',               //如果从 url 获取数据，并且需要跨域，则该参数必须设置
+            processData: function(json){     // url 获取数据时，对数据的处理，作为 getData 的回调函数
+                var i, len, data = {value: []};
 
-            len = json.s.length;
+                if(!json || !json.result || json.result.length == 0) {
+                    return false;
+                }
 
-            jsonStr = "{'value':[";
-            for (i = 0; i < len; i++) {
-                data.value.push({
-                    word: json.s[i]
-                });
+                len = json.result.length;
+
+                for (i = 0; i < len; i++) {
+                    data.value.push({
+                        "Id": (i + 1),
+                        "Keyword": json.result[i][0],
+                        "Count": json.result[i][1]
+                    });
+                }
+                console.log(data);
+                return data;
             }
-            data.defaults = 'baidu';
+        }).on('onDataRequestSuccess', function (e, result) {
+            console.log('onDataRequestSuccess: ', result);
+        }).on('onSetSelectValue', function (e, keyword, data) {
+            console.log('onSetSelectValue: ', keyword, data);
+        }).on('onUnsetSelectValue', function (e) {
+            console.log("onUnsetSelectValue");
+        });
 
-            //字符串转化为 js 对象
-            return data;
-        }
-    }).on('onDataRequestSuccess', function (e, result) {
-        console.log('onDataRequestSuccess: ', result);
-    }).on('onSetSelectValue', function (e, keyword, data) {
-        console.log('onSetSelectValue: ', keyword, data);
-    }).on('onUnsetSelectValue', function (e) {
-        console.log("onUnsetSelectValue");
-    });
-    /**
-     * 淘宝搜索 API 测试
-     */
-    var taobaoBsSuggest = $("#taobao").bsSuggest({
-        indexId: 2,             //data.value 的第几个数据，作为input输入框的内容
-        indexKey: 1,            //data.value 的第几个数据，作为input输入框的内容
-        allowNoKeyword: false,  //是否允许无关键字时请求数据。为 false 则无输入时不执行过滤请求
-        multiWord: true,        //以分隔符号分割的多关键字支持
-        separator: ",",         //多关键字支持时的分隔符，默认为空格
-        getDataMethod: "url",   //获取数据的方式，总是从 URL 获取
-        showHeader: true,       //显示多个字段的表头
-        autoDropup: true,       //自动判断菜单向上展开
-        effectiveFieldsAlias:{Id: "序号", Keyword: "关键字"},
-        url: 'http://suggest.taobao.com/sug?code=utf-8&extras=1&q=', /*优先从url ajax 请求 json 帮助数据，注意最后一个参数为关键字请求参数*/
-        jsonp: 'callback',               //如果从 url 获取数据，并且需要跨域，则该参数必须设置
-        processData: function(json){     // url 获取数据时，对数据的处理，作为 getData 的回调函数
-            var i, len, data = {value: []};
-
-            if(!json || !json.result || json.result.length == 0) {
-                return false;
-            }
-
-            len = json.result.length;
-
-            for (i = 0; i < len; i++) {
-                data.value.push({
-                    "Id": (i + 1),
-                    "Keyword": json.result[i][0],
-                    "Count": json.result[i][1]
-                });
-            }
-            console.log(data);
-            return data;
-        }
-    }).on('onDataRequestSuccess', function (e, result) {
-        console.log('onDataRequestSuccess: ', result);
-    }).on('onSetSelectValue', function (e, keyword, data) {
-        console.log('onSetSelectValue: ', keyword, data);
-    }).on('onUnsetSelectValue', function (e) {
-        console.log("onUnsetSelectValue");
-    });
-
-    $("form").submit(function(e) {
-        return false;
-    });
+        $("form").submit(function(e) {
+            return false;
+        });
+    }());
     </script>
 </body>
 
