update README.md and demo
Signed-off-by: renxia <lzwy0820@qq.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -75,7 +75,7 @@
         <a target="_blank" href="http://getbootstrap.com/components/#input-groups-buttons-dropdowns">V3</a> /
         <a target="_blank" href="http://v4-alpha.getbootstrap.com/components/input-group/#buttons-with-dropdowns">V4</a>
          ) 的搜索建议插件。</p>
-        <p>使用说明：<a href="README.html" target="_blank">README.html</a> <a href="https://github.com/lzwme/bootstrap-suggest-plugin" target="_blank">Github</a></p>
+        <p>使用说明：<a href="../README.html" target="_blank">README.html</a> <a href="https://github.com/lzwme/bootstrap-suggest-plugin" target="_blank">Github</a></p>
 
         <p>使用示例：<a href="demo.js" target="_blank">demo.js</a></p>
 
