enable/destroy 等方法调用报错问题修复，更新版本号 0.1.2
Signed-off-by: 任侠 <lzwy0820@qq.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -116,6 +116,7 @@
                 </div>
             </div>
             <p>
+                <br><code>showHeader: true,</code> //显示 header
                 <br><code>showBtn: false,</code> //不显示下拉按钮
                 <br><code>delayUntilKeyup: true</code> //获取数据方式为 firstByUrl 时，延迟到有输入/获取到焦点时请求
             </p>
