--- a/demo/index.html
+++ b/demo/index.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
 
-            <h3>测试(首次从 URL 获取数据，不显示按钮)</h3>
+            <h3>测试(首次从 URL 获取数据，显示 header，不显示按钮，忽略大小写)</h3>
             <a class="btn btn-primary" data-toggle="modal" data-target="#modalTest">modal test</a></p>
             <div class="row">
                 <div class="col-lg-6">
@@ -116,6 +116,7 @@
                 </div>
             </div>
             <p>
+                <br><code>ignorecase: true,</code> //忽略大小写
                 <br><code>showHeader: true,</code> //显示 header
                 <br><code>showBtn: false,</code> //不显示下拉按钮
                 <br><code>delayUntilKeyup: true</code> //获取数据方式为 firstByUrl 时，延迟到有输入/获取到焦点时请求
