ios 输入法选中中文时不触发 keyup 事件问题兼容
Signed-off-by: 任侠 <lzwy0820@qq.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Bootstrap 搜索建议插件</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件">
     <meta name="Keywords" content="Bootstrap Search Suggest,bootstrap,搜索建议插件">
-    <meta name="author" content="lizhiwen@meizu.com">
+    <meta name="author" content="http://lzw.me">
     <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
     h3{
