fix disabled btn. version 0.1.6
Signed-off-by: 任侠 <lzwy0820@qq.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -269,7 +269,7 @@ fnAdjustAjaxParam: function(keyword, opts) {
             <p>支持逗号分隔多关键字，并展示列表表头。</p>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="input-group" style="width: 400px;">
+                    <div class="input-group">
                         <input type="text" class="form-control" id="taobao">
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
