fix: 设置了 effectiveFields，showHeader 参数为 false 无效问题修复； getDataMethod: 'firstByUrl' 时 fnProcessData 处理逻辑问题修复； 代码逻辑优化。
Signed-off-by: renxia <lzwy0820@qq.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -85,7 +85,7 @@
         </p>
 
 
-        <form action="index_submit" method="get" accept-charset="utf-8" role="form">
+        <div>
             <h3>测试(首次从 URL 获取数据)</h3>
             <p>配置了 data-id，非下拉菜单选择输入则背景色警告。</p>
 
@@ -292,7 +292,7 @@ fnAdjustAjaxParam: function(keyword, opts) {
                 <br><code>showHeader: true,</code>       //显示多个字段的表头
                 <br><code>effectiveFieldsAlias: {Id: "序号", Keyword: "关键字", Count: "数量"}</code> //showHeader 时，header 别名
             </p>
-        </form>
+        </div>
     </div>
     <script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/tether/1.2.0/js/tether.min.js"></script>
